fix checkbox on ie 8

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -287,7 +287,7 @@ blockquote {
           vertical-align: middle;
 
           // hack for ie
-          //background-image: url("../images/checkbox.png")\9;
+          background-image: url("../images/checkbox.png")\9;
           background-color: transparent\9;
           background-repeat: no-repeat\9;
           background-position: center\9;
@@ -295,7 +295,7 @@ blockquote {
         }
 
         &.checked:before {
-          background-image: url("../images/checkbox-checked.png")\9;
+          //background-image: url("../images/checkbox-checked.png")\9;
           content: ""\9;
           position: relative;
           behavior: url(css/PIE.htc);
@@ -316,10 +316,10 @@ blockquote {
           text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
         }
 
-        /* &.checked + label:before {
+        &.checked + label:before {
           background-image: url("../images/checkbox-checked.png")\9;
           content: ""\9;
-        } */
+        }
       }
     }
     
